# agent-trace-intelligence

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent_trace_mcp_buildspec.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/carousel/: carousel.html  run_enterprise_traces.py
src/agent_trace_intelligence/: server.py
src/agent_trace_intelligence/formats/: __init__.py  autogen.py  langchain.py  maf.py  openai_agents.py
src/agent_trace_intelligence/judge/: llm_judge.py
src/agent_trace_intelligence/models/: trace.py
src/agent_trace_intelligence/tools/: efficiency_score.py  judge_trace.py  trace_breakdown.py
tests/: test_adapters.py  test_efficiency_score.py  test_error_contract.py  test_server.py
tests/sample_traces/: autogen_raw.json  bad_trace.json  good_trace.json  inefficient_trace.json  langchain_raw.json  maf_raw.json  openai_agents_raw.json
