[project]
name = "agent-trace-intelligence"
version = "0.1.1"
description = "MCP server that diagnoses why your agent behaved the way it did, and how to fix it"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "agent", "llm", "debugging", "tracing", "ai-agents", "langchain", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/harinarayn/agent-trace-intelligence"
Repository = "https://github.com/harinarayn/agent-trace-intelligence"
Issues = "https://github.com/harinarayn/agent-trace-intelligence/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
agent-trace-intelligence = "agent_trace_intelligence.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace_intelligence"]
